--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+# Server Configuration
 server.port=8080
+
+# MongoDB Configuration
+spring.data.mongodb.uri=mongodb://localhost:27017/protectalk\
+  spring.data.mongodb.database=protectalk
+
+# Logging Configuration
+logging.level.com.protectalk=DEBUG
+logging.level.org.springframework=INFO
+logging.level.org.mongodb.driver=INFO
