First time working flow of registration and getting the information from local mongo-db!
How exciting!!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,7 @@
 server.port=8080
 
 # MongoDB Configuration
-spring.data.mongodb.uri=mongodb://localhost:27017/protectalk\
-  spring.data.mongodb.database=protectalk
+spring.data.mongodb.uri=mongodb://localhost:27017/protectalk
 
 # Logging Configuration
 logging.level.com.protectalk=DEBUG
