Refactor alert and device token management: rename classes, update package structure, and enhance data models

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.data.mongodb.uri=mongodb://localhost:27017/protectalk
 logging.level.com.protectalk=DEBUG
 logging.level.org.springframework=INFO
 logging.level.org.mongodb.driver=INFO
+
+# Application Settings
+protectalk.threshold.modelScore=0.80
