Switching to ENV variables for firebase and server.
Successfully connected to the remote server with db integration!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,10 @@
 server.port=8080
 
 # MongoDB Configuration
-spring.data.mongodb.uri=mongodb://localhost:27017/protectalk
+spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI:mongodb://localhost:27017/protectalk}
+
+# Firebase Configuration
+firebase.service-account.path=${FIREBASE_SERVICE_ACCOUNT_PATH:/opt/protectalk/config/firebase-service-account.json}
 
 # Logging Configuration
 logging.level.com.protectalk=DEBUG
